--- a/Acionar_Cooler_GPU/mainwindow.ui
+++ b/Acionar_Cooler_GPU/mainwindow.ui
@@ -22,7 +22,7 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>368</width>
+      <width>375</width>
       <height>354</height>
      </rect>
     </property>
@@ -51,11 +51,11 @@
               </font>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: rgb(76, 76, 76);
+              <string notr="true">background-color: rgb(0, 0, 176);
 color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
-              <string>Ajustar  Cooler</string>
+              <string>Set Speed</string>
              </property>
              <property name="iconSize">
               <size>
@@ -80,12 +80,17 @@ color: rgb(255, 255, 255);</string>
            </item>
            <item>
             <widget class="QPushButton" name="pushButton">
+             <property name="font">
+              <font>
+               <pointsize>15</pointsize>
+              </font>
+             </property>
              <property name="styleSheet">
               <string notr="true">background-color: rgb(0, 0, 176);
 color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
-              <string>Speed</string>
+              <string>View Speed</string>
              </property>
             </widget>
            </item>
@@ -148,7 +153,7 @@ color: rgb(255, 255, 255);</string>
             <string notr="true">color: rgb(255, 255, 255);</string>
            </property>
            <property name="text">
-            <string>Barra de velocidade do cooler</string>
+            <string>Select speed </string>
            </property>
           </widget>
          </item>
@@ -194,7 +199,14 @@ background-color: rgb(44, 44, 44);</string>
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:12pt; font-weight:56; font-style:italic;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Software de controle de velocidade do Cooler (FAN) da GPU da placa Jetson TX1&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Software de controle de velocidade do Cooler (FAN) da GPU da placa Jetson TX1&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;                                                      By:&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;                                                     Tiago Araujo Alvarenga&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
